--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,2 @@
-<%= form_tag(posts_path, method: "post") do %>
-    <div class="form-group">
-     <%= text_field_tag(:title, nil,placeholder:"Title,,,",class:"form-control") %>
-    </div>
-    <div class="form-group">
-     <%= text_area_tag(:content, nil,placeholder:"content,,,",class:"form-control",rows:5) %>
-    </div>
-    <%= submit_tag "Create", class:"btn btn-success btn-block" %>
-  <% end %>
+<% content_for :page_title, "Create a new post" %>
+<%= render 'form' %>
